--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <meta name="viewpoint" content="width=device-width, initial-scale=1.0">
 
-        <link rel="stylesheet" href="css/style.css">
+        <link href="css/style.css" rel="stylesheet" type="text/css">
        <title>>Penguins</title>
 
     
@@ -17,10 +17,22 @@
             <div class="nav_buttons">Habitat</div>
 
         </nav>
-        <div id="left"></div> 
-            <div> id= "top"></div>
-            <div></div>
-        <div id="right"></div>
+
+        <section class="wrapper">
+
+        </section>
+        <div id="left">
+            <div id="top"></div>
+
+            <div id="bottom"></div>
+
+
+
+        </div> 
+            <div id="right"
+            <img src="images/bebe_1._jpg" alt="bebe 1" style="width:128px;height:128;">
+            <p>Hi I'm penguins!</p>
+        </body>div>
       
 
 </body>
